welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:12: error: type gray is not a member of object java.awt.Color
      setCouleurBrosse(c:Color.gray)
                               ^SlugTracking:12: error: not found: value c
      setCouleurBrosse(c:Color.gray)
                       ^SlugTracking:14: error: type mismatch;
 found   : Unit
 required: Boolean
      leveBrosse()
                ^SlugTracking:17: error: type mismatch;
 found   : Unit
 required: Boolean
      droite()
            ^SlugTracking:21: error: type mismatch;
 found   : Unit
 required: Boolean
    droite()
          ^