welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  
  var color=Color.white
  if (estFaceMur()==false){
    avance()
    color=getCouleurSol()
    recule()
    
    if (color==Color.green){
      avance()
      setCouleurBrosse(c:Color.gray)
      baisseBrosse()
      leveBrosse()
    }
    else {
      droite()
    }
  }
  else{
    droite()
  }
}